// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trailing.js [espree] format 1`] = `
"Unexpected token type (1:8)
> 1 | export type Result<T, V> = | { kind: \\"not-test-editor1\\" } | { kind: \\"not-test-editor2\\" };
    |        ^
  2 |
  3 | // Note: there are trailing whitespace in this file
  4 | \`"
`;

exports[`trailing.js [meriyah] format 1`] = `
"[1:11]: Unexpected token: 'identifier' (1:11)
> 1 | export type Result<T, V> = | { kind: \\"not-test-editor1\\" } | { kind: \\"not-test-editor2\\" };
    |           ^
  2 |
  3 | // Note: there are trailing whitespace in this file
  4 | \`"
`;

exports[`trailing.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export type Result<T, V> = | { kind: "not-test-editor1" } | { kind: "not-test-editor2" };

// Note: there are trailing whitespace in this file
\`
   
   
\` + \`
    
    
\`;

=====================================output=====================================
export type Result<T, V> =
  | { kind: "not-test-editor1" }
  | { kind: "not-test-editor2" };

// Note: there are trailing whitespace in this file
\`
   
   
\` +
  \`
    
    
\`;

================================================================================
`;
